// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/layout/Sidenav adds mini classes without sideBarOpen 1`] = `
<div
  className="MuiPaper-root-2758040674 MuiPaper-shadow16-3841796706 MuiPaper-rounded-418257787 SideNav-listWrapper-513568510 SideNav-sideNavMini-2485013513"
>
  <div
    className="MuiList-root-43412855 MuiList-padding-392119320 SideNav-list-3036263360"
  >
    <a
      href="/log"
      onClick={[Function]}
    >
      <div
        className="MuiListItem-root-3441122480 MuiListItem-gutters-58642691 MuiListItem-default-132630306 SideNav-listItem-2509608802"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-3177716317 MuiButton-root-325725483 MuiButton-flatAccent-3482837232 SideNav-button-2847385078"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-49836587"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-3402991258 fa fa-file-text-o SideNav-icon-2371623600"
            />
            <p
              className="SideNav-label-470754758 SideNav-labelMini-5987815"
            >
              Log
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-3868442396"
          />
        </button>
      </div>
    </a>
    <a
      href="/execute"
      onClick={[Function]}
    >
      <div
        className="MuiListItem-root-3441122480 MuiListItem-gutters-58642691 MuiListItem-default-132630306 SideNav-listItem-2509608802"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-3177716317 MuiButton-root-325725483 MuiButton-flatAccent-3482837232 SideNav-button-2847385078"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-49836587"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-3402991258 fa fa-cog SideNav-icon-2371623600"
            />
            <p
              className="SideNav-label-470754758 SideNav-labelMini-5987815"
            >
              Execute
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-3868442396"
          />
        </button>
      </div>
    </a>
    <a
      href="/config"
      onClick={[Function]}
    >
      <div
        className="MuiListItem-root-3441122480 MuiListItem-gutters-58642691 MuiListItem-default-132630306 SideNav-listItem-2509608802"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-3177716317 MuiButton-root-325725483 MuiButton-flatAccent-3482837232 SideNav-button-2847385078"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-49836587"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-3402991258 fa fa-pencil SideNav-icon-2371623600"
            />
            <p
              className="SideNav-label-470754758 SideNav-labelMini-5987815"
            >
              Config
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-3868442396"
          />
        </button>
      </div>
    </a>
    <a
      href="/history"
      onClick={[Function]}
    >
      <div
        className="MuiListItem-root-3441122480 MuiListItem-gutters-58642691 MuiListItem-default-132630306 SideNav-listItem-2509608802"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-3177716317 MuiButton-root-325725483 MuiButton-flatAccent-3482837232 SideNav-button-2847385078"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-49836587"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-3402991258 fa fa-history SideNav-icon-2371623600"
            />
            <p
              className="SideNav-label-470754758 SideNav-labelMini-5987815"
            >
              History
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-3868442396"
          />
        </button>
      </div>
    </a>
    <a
      href="/movies"
      onClick={[Function]}
    >
      <div
        className="MuiListItem-root-3441122480 MuiListItem-gutters-58642691 MuiListItem-default-132630306 SideNav-listItem-2509608802"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-3177716317 MuiButton-root-325725483 MuiButton-flatAccent-3482837232 SideNav-button-2847385078"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-49836587"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-3402991258 fa fa-film SideNav-icon-2371623600"
            />
            <p
              className="SideNav-label-470754758 SideNav-labelMini-5987815"
            >
              Movies
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-3868442396"
          />
        </button>
      </div>
    </a>
    <a
      href="/pending"
      onClick={[Function]}
    >
      <div
        className="MuiListItem-root-3441122480 MuiListItem-gutters-58642691 MuiListItem-default-132630306 SideNav-listItem-2509608802"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-3177716317 MuiButton-root-325725483 MuiButton-flatAccent-3482837232 SideNav-button-2847385078"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-49836587"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-3402991258 fa fa-check SideNav-icon-2371623600"
            />
            <p
              className="SideNav-label-470754758 SideNav-labelMini-5987815"
            >
              Pending
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-3868442396"
          />
        </button>
      </div>
    </a>
    <a
      href="/schedule"
      onClick={[Function]}
    >
      <div
        className="MuiListItem-root-3441122480 MuiListItem-gutters-58642691 MuiListItem-default-132630306 SideNav-listItem-2509608802"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-3177716317 MuiButton-root-325725483 MuiButton-flatAccent-3482837232 SideNav-button-2847385078"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-49836587"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-3402991258 fa fa-calendar SideNav-icon-2371623600"
            />
            <p
              className="SideNav-label-470754758 SideNav-labelMini-5987815"
            >
              Schedule
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-3868442396"
          />
        </button>
      </div>
    </a>
    <a
      href="/seen"
      onClick={[Function]}
    >
      <div
        className="MuiListItem-root-3441122480 MuiListItem-gutters-58642691 MuiListItem-default-132630306 SideNav-listItem-2509608802"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-3177716317 MuiButton-root-325725483 MuiButton-flatAccent-3482837232 SideNav-button-2847385078"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-49836587"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-3402991258 fa fa-eye SideNav-icon-2371623600"
            />
            <p
              className="SideNav-label-470754758 SideNav-labelMini-5987815"
            >
              Seen
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-3868442396"
          />
        </button>
      </div>
    </a>
    <a
      href="/series"
      onClick={[Function]}
    >
      <div
        className="MuiListItem-root-3441122480 MuiListItem-gutters-58642691 MuiListItem-default-132630306 SideNav-listItem-2509608802"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-3177716317 MuiButton-root-325725483 MuiButton-flatAccent-3482837232 SideNav-button-2847385078"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-49836587"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-3402991258 fa fa-tv SideNav-icon-2371623600"
            />
            <p
              className="SideNav-label-470754758 SideNav-labelMini-5987815"
            >
              Series
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-3868442396"
          />
        </button>
      </div>
    </a>
    <a
      href="/status"
      onClick={[Function]}
    >
      <div
        className="MuiListItem-root-3441122480 MuiListItem-gutters-58642691 MuiListItem-default-132630306 SideNav-listItem-2509608802"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-3177716317 MuiButton-root-325725483 MuiButton-flatAccent-3482837232 SideNav-button-2847385078"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-49836587"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-3402991258 fa fa-heartbeat SideNav-icon-2371623600"
            />
            <p
              className="SideNav-label-470754758 SideNav-labelMini-5987815"
            >
              Status
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-3868442396"
          />
        </button>
      </div>
    </a>
  </div>
  <div
    className="SideNav-versionHide-5987815"
  >
    <div
      className="Version-version-3221117096"
    >
      <p
        className="Version-par-2841032265"
      >
        Version Info
      </p>
      <p
        className="Version-par-2841032265"
      >
        Flexget: 
         
         
      </p>
      <p
        className="Version-par-2841032265"
      >
        API: 
      </p>
    </div>
  </div>
</div>
`;

exports[`components/layout/Sidenav renders correctly with sideBarOpen 1`] = `
<div
  className="MuiPaper-root-2758040674 MuiPaper-shadow16-3841796706 MuiPaper-rounded-418257787 SideNav-listWrapper-513568510"
>
  <div
    className="MuiList-root-43412855 MuiList-padding-392119320 SideNav-list-3036263360"
  >
    <a
      href="/log"
      onClick={[Function]}
    >
      <div
        className="MuiListItem-root-3441122480 MuiListItem-gutters-58642691 MuiListItem-default-132630306 SideNav-listItem-2509608802"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-3177716317 MuiButton-root-325725483 MuiButton-flatAccent-3482837232 SideNav-button-2847385078"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-49836587"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-3402991258 fa fa-file-text-o SideNav-icon-2371623600"
            />
            <p
              className="SideNav-label-470754758"
            >
              Log
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-3868442396"
          />
        </button>
      </div>
    </a>
    <a
      href="/execute"
      onClick={[Function]}
    >
      <div
        className="MuiListItem-root-3441122480 MuiListItem-gutters-58642691 MuiListItem-default-132630306 SideNav-listItem-2509608802"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-3177716317 MuiButton-root-325725483 MuiButton-flatAccent-3482837232 SideNav-button-2847385078"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-49836587"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-3402991258 fa fa-cog SideNav-icon-2371623600"
            />
            <p
              className="SideNav-label-470754758"
            >
              Execute
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-3868442396"
          />
        </button>
      </div>
    </a>
    <a
      href="/config"
      onClick={[Function]}
    >
      <div
        className="MuiListItem-root-3441122480 MuiListItem-gutters-58642691 MuiListItem-default-132630306 SideNav-listItem-2509608802"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-3177716317 MuiButton-root-325725483 MuiButton-flatAccent-3482837232 SideNav-button-2847385078"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-49836587"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-3402991258 fa fa-pencil SideNav-icon-2371623600"
            />
            <p
              className="SideNav-label-470754758"
            >
              Config
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-3868442396"
          />
        </button>
      </div>
    </a>
    <a
      href="/history"
      onClick={[Function]}
    >
      <div
        className="MuiListItem-root-3441122480 MuiListItem-gutters-58642691 MuiListItem-default-132630306 SideNav-listItem-2509608802"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-3177716317 MuiButton-root-325725483 MuiButton-flatAccent-3482837232 SideNav-button-2847385078"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-49836587"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-3402991258 fa fa-history SideNav-icon-2371623600"
            />
            <p
              className="SideNav-label-470754758"
            >
              History
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-3868442396"
          />
        </button>
      </div>
    </a>
    <a
      href="/movies"
      onClick={[Function]}
    >
      <div
        className="MuiListItem-root-3441122480 MuiListItem-gutters-58642691 MuiListItem-default-132630306 SideNav-listItem-2509608802"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-3177716317 MuiButton-root-325725483 MuiButton-flatAccent-3482837232 SideNav-button-2847385078"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-49836587"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-3402991258 fa fa-film SideNav-icon-2371623600"
            />
            <p
              className="SideNav-label-470754758"
            >
              Movies
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-3868442396"
          />
        </button>
      </div>
    </a>
    <a
      href="/pending"
      onClick={[Function]}
    >
      <div
        className="MuiListItem-root-3441122480 MuiListItem-gutters-58642691 MuiListItem-default-132630306 SideNav-listItem-2509608802"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-3177716317 MuiButton-root-325725483 MuiButton-flatAccent-3482837232 SideNav-button-2847385078"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-49836587"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-3402991258 fa fa-check SideNav-icon-2371623600"
            />
            <p
              className="SideNav-label-470754758"
            >
              Pending
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-3868442396"
          />
        </button>
      </div>
    </a>
    <a
      href="/schedule"
      onClick={[Function]}
    >
      <div
        className="MuiListItem-root-3441122480 MuiListItem-gutters-58642691 MuiListItem-default-132630306 SideNav-listItem-2509608802"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-3177716317 MuiButton-root-325725483 MuiButton-flatAccent-3482837232 SideNav-button-2847385078"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-49836587"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-3402991258 fa fa-calendar SideNav-icon-2371623600"
            />
            <p
              className="SideNav-label-470754758"
            >
              Schedule
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-3868442396"
          />
        </button>
      </div>
    </a>
    <a
      href="/seen"
      onClick={[Function]}
    >
      <div
        className="MuiListItem-root-3441122480 MuiListItem-gutters-58642691 MuiListItem-default-132630306 SideNav-listItem-2509608802"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-3177716317 MuiButton-root-325725483 MuiButton-flatAccent-3482837232 SideNav-button-2847385078"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-49836587"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-3402991258 fa fa-eye SideNav-icon-2371623600"
            />
            <p
              className="SideNav-label-470754758"
            >
              Seen
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-3868442396"
          />
        </button>
      </div>
    </a>
    <a
      href="/series"
      onClick={[Function]}
    >
      <div
        className="MuiListItem-root-3441122480 MuiListItem-gutters-58642691 MuiListItem-default-132630306 SideNav-listItem-2509608802"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-3177716317 MuiButton-root-325725483 MuiButton-flatAccent-3482837232 SideNav-button-2847385078"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-49836587"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-3402991258 fa fa-tv SideNav-icon-2371623600"
            />
            <p
              className="SideNav-label-470754758"
            >
              Series
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-3868442396"
          />
        </button>
      </div>
    </a>
    <a
      href="/status"
      onClick={[Function]}
    >
      <div
        className="MuiListItem-root-3441122480 MuiListItem-gutters-58642691 MuiListItem-default-132630306 SideNav-listItem-2509608802"
        disabled={false}
      >
        <button
          className="MuiButtonBase-root-3177716317 MuiButton-root-325725483 MuiButton-flatAccent-3482837232 SideNav-button-2847385078"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-49836587"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-3402991258 fa fa-heartbeat SideNav-icon-2371623600"
            />
            <p
              className="SideNav-label-470754758"
            >
              Status
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-3868442396"
          />
        </button>
      </div>
    </a>
  </div>
  <div
    className=""
  >
    <div
      className="Version-version-3221117096"
    >
      <p
        className="Version-par-2841032265"
      >
        Version Info
      </p>
      <p
        className="Version-par-2841032265"
      >
        Flexget: 
         
         
      </p>
      <p
        className="Version-par-2841032265"
      >
        API: 
      </p>
    </div>
  </div>
</div>
`;
